I have added arrows to pass on to the next slide and I get to the next slide but nothing shows up and I have tried all to see whats going on but nothing I also added more keys and attached the correct sound to the key but its just not showing on the slide and I've got more research to do to figure out whats happening

--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,43 @@ kbd {
   letter-spacing: 0.1rem;
   color: #ffc600;
 }
+
+
+.dot {
+  text-align:center;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #ffc600;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  
+}
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+  background-color: #ffc600;
+}
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+  background-color: #ffc600;
+}
